added ar text till root Ebl. fixed bug in num2word. change appearance of aorist to vowel mark

--- a/out.html
+++ b/out.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
         <style> 
           :lang(ar) {
-            font-family: Vazir, serif;
+            font-family: Scheherazade New, serif;
           }
           .container {
             max-width: 400px;
@@ -31,105 +31,112 @@
           <div class="row justify-content-center"><div class="col-auto" dir="ltr" lang="en"><h3>J.G. Hava</h3></div></div>
           <div class="row justify-content-center"><div class="col-auto" dir="ltr" lang="en">(Digitization project. Work in progress.)</div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ء»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">أَ</div><div class="col" lang="en" dir="ltr">Hey, *interr. part.*, I say, is it?
+<div class="row justify-content-around"><div class="col-auto">أَ</div><div class="col" lang="en" dir="ltr">Hey, <i>interr. part.</i>, I say, is it?
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَلَمْ وأَلَا</div><div class="col" lang="en" dir="ltr">Is (he, she, it)... not?
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَلَمَّا</div><div class="col" lang="en" dir="ltr">Is (he, she, it)... not... yet?
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءب»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">I أَبَّ يَؤُبُّ (أَبّ، أَبَابَة، إِبَابَة) إِلى</div><div class="col" lang="en" dir="ltr">To desire a. th.
+<div class="row justify-content-around"><div class="col-auto">I أَبَّ ◌ُ (أَبّ ، أَبَابَة ، إِبَابَة) إِلى</div><div class="col" lang="en" dir="ltr">To desire a. th.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">-- يَئِبُّ يَؤُبُّ (أَبّ، أَبِيب، أَبَاب، أَبَابَة) ل</div><div class="col" lang="en" dir="ltr">To prepare oneself to, for. 
+<div class="row justify-content-around"><div class="col-auto">-- ◌ِ ◌ُ (أَبّ ، أَبِيب ، أَبَاب ، أَبَابَة) ل</div><div class="col" lang="en" dir="ltr">To prepare oneself to, for. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبّ جـ. أَؤُبّ</div><div class="col" lang="en" dir="ltr">Meadow, grazing.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبِيب</div><div class="col" lang="en" dir="ltr">Eleventh month of the Coptic year. July. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبت»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">I أَبَتَ يَأْبُتُ يَأْبِتُ، أَبِتَ يَأْبَتُ (أَبْت، أُبُوت)</div><div class="col" lang="en" dir="ltr">To be burning hot (day). 
+<div class="row justify-content-around"><div class="col-auto">I أَبَتَ ◌ُ ◌ِ ، أَبِتَ ◌َ (أَبْت ، أُبُوت)</div><div class="col" lang="en" dir="ltr">To be burning hot (day). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">آبِت، أَبِت، أَبْت</div><div class="col" lang="en" dir="ltr">Burning, hot (day).
+<div class="row justify-content-around"><div class="col-auto">آبِت ، أَبِت ، أَبْت</div><div class="col" lang="en" dir="ltr">Burning, hot (day).
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبث»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">I أَبَثَ يَأْبِثُ (أَبْث) ه، على</div><div class="col" lang="en" dir="ltr">To speak ill of, to slander. 
+<div class="row justify-content-around"><div class="col-auto">I أَبَثَ ◌ِ (أَبْث) ه ، على</div><div class="col" lang="en" dir="ltr">To speak ill of, to slander. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبجد»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبْجَدْ، الحُرُوف الأَبْجَدِيَّة</div><div class="col" lang="en" dir="ltr">The alphabet.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبد»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">I أَبَدَ يَأْبِدُ (أُبُود)</div><div class="col" lang="en" dir="ltr">To last.
+<div class="row justify-content-around"><div class="col-auto">I أَبَدَ ◌ِ (أُبُود)</div><div class="col" lang="en" dir="ltr">To last.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">-- ب</div><div class="col" lang="en" dir="ltr">To settle, to abide in a place.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">-- يَأْبُدُ يَأْبِدُ (أُبُود)</div><div class="col" lang="en" dir="ltr">To become wild (cattle); to take fright. 
+<div class="row justify-content-around"><div class="col-auto">-- ◌ُ ◌ِ (أُبُود)</div><div class="col" lang="en" dir="ltr">To become wild (cattle); to take fright. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">I أَبَدَ يَأْبَدُ (أَبَد) على</div><div class="col" lang="en" dir="ltr">To irritate o.'s self with.
+<div class="row justify-content-around"><div class="col-auto">I أَبَدَ ◌َ (أَبَد) على</div><div class="col" lang="en" dir="ltr">To irritate o.'s self with.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">II هـ، ه</div><div class="col" lang="en" dir="ltr">To perpetuate. To scare.
+<div class="row justify-content-around"><div class="col-auto">II أَبَّدَ هـ ، ه</div><div class="col" lang="en" dir="ltr">To perpetuate. To scare.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">V</div><div class="col" lang="en" dir="ltr">To become everlasting (th.). To become wild (place). 
+<div class="row justify-content-around"><div class="col-auto">V تَأَبَّدَ</div><div class="col" lang="en" dir="ltr">To become everlasting (th.). To become wild (place). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">أَبَد جـ. آبَاد، أُبُود</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
+<div class="row justify-content-around"><div class="col-auto">أَبَد جـ. آبَاد ، أُبُود</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبَدًا، أَبَد الأبَدِين، أَبَد الأَبَد</div><div class="col" lang="en" dir="ltr">Always, ever, never. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">على الأَبَد، إلى الأَبَد</div><div class="col" lang="en" dir="ltr">For ever.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">آبِدَة جـ. أَوَابِود</div><div class="col" lang="en" dir="ltr">An extraordinary event. A wild beast. 
+<div class="row justify-content-around"><div class="col-auto">آبِدَة جـ. أَوَابِد</div><div class="col" lang="en" dir="ltr">An extraordinary event. A wild beast. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">أَبَد، مُؤَبَّد</div><div class="col" lang="en" dir="ltr">Perpetual; eternal.
+<div class="row justify-content-around"><div class="col-auto">أَبَد ، مُؤَبَّد</div><div class="col" lang="en" dir="ltr">Perpetual; eternal.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبَد</div><div class="col" lang="en" dir="ltr">Perpetuity; eternity.
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبر»</b></div><div class="col" lang="en" dir="ltr"></div></div>
-<div class="row justify-content-around"><div class="col-auto">I أَبَرَ يَأْبِرُ يَأْبُرُ (أَبْر، إِبَار) ه</div><div class="col" lang="en" dir="ltr">To prick a. o.  with a needle. To spur. To give to a. o. to eat a needle in his food. To backbite. 
+<div class="row justify-content-around"><div class="col-auto">I أَبَرَ ◌ِ ◌ُ (أَبْر ، إِبَار) ه</div><div class="col" lang="en" dir="ltr">To prick a. o.  with a needle. To spur. To give to a. o. to eat a needle in his food. To backbite. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To fecundate; to graft (a palm-tree). etc. 
+<div class="row justify-content-around"><div class="col-auto">I أَبَرَ ◌ُ ◌ِ (أَبْر ، إِبَارَة) هـ</div><div class="col" lang="en" dir="ltr">To fecundate; to graft (a palm-tree). etc. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Needle; sting. Sea-compass.
+<div class="row justify-content-around"><div class="col-auto">إِبْرَة جـ. إِبَر</div><div class="col" lang="en" dir="ltr">Needle; sting. Sea-compass.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Needle-case. Grafting-knife.
+<div class="row justify-content-around"><div class="col-auto">مِئْبَر ، مِئْبَار</div><div class="col" lang="en" dir="ltr">Needle-case. Grafting-knife.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Slander, backbiting.
+<div class="row justify-content-around"><div class="col-auto">مِئْبَرَة جـ. مَآبِرُ</div><div class="col" lang="en" dir="ltr">Slander, backbiting.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Pricked; grafted. Sharp-pointed.
+<div class="row justify-content-around"><div class="col-auto">مَأْبُور</div><div class="col" lang="en" dir="ltr">Pricked; grafted. Sharp-pointed.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To dart forth, to rush, to leap (gazelle). 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبز»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَبَزَ ◌ِ (أَبْز ، أُبُوز)</div><div class="col" lang="en" dir="ltr">To dart forth, to rush, to leap (gazelle). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To insult a. o.
+<div class="row justify-content-around"><div class="col-auto">-- ب (أَبْز)</div><div class="col" lang="en" dir="ltr">To insult a. o.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To reprove, to despise, to humiliate a. o. 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبس»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَبَسَ ◌ِ أَبْس ، II أَبَّسَ ه</div><div class="col" lang="en" dir="ltr">To reprove, to despise, to humiliate a. o. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To pick up, to gather a. th. 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبش»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَبَشَ ◌ُ (أَبْش) ، II أَبَّشَ هـ</div><div class="col" lang="en" dir="ltr">To pick up, to gather a. th. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Crowd.
+<div class="row justify-content-around"><div class="col-auto">أُبَاشَة</div><div class="col" lang="en" dir="ltr">Crowd.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To fasten the foot of a camel to (his thigh). 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبض»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَبَضَ ◌ُ ◌ِ (أَبْض) ، V تَأَبَّضَ ه</div><div class="col" lang="en" dir="ltr">To fasten the foot of a camel to (his thigh). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Rope for fastening the foot of a camel. Hock, hamstring. 
+<div class="row justify-content-around"><div class="col-auto">إِبَاض جـ. أُبُض</div><div class="col" lang="en" dir="ltr">Rope for fastening the foot of a camel. Hock, hamstring. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Man's and camel's ham. 
+<div class="row justify-content-around"><div class="col-auto">أُبْض جـ. آبَاض ، مَأْبِض جـ. مَآبِضُ</div><div class="col" lang="en" dir="ltr">Man's and camel's ham. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Armpit.
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبط»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">إِبْط جـ. آبَاط ، + بَاط بَاطَات</div><div class="col" lang="en" dir="ltr">Armpit.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To carry a. th. under the armpit.
+<div class="row justify-content-around"><div class="col-auto">V تَأَبَّطَ هـ</div><div class="col" lang="en" dir="ltr">To carry a. th. under the armpit.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Nickname of an Arabian poet, lit : he carries evil under his arm. 
+<div class="row justify-content-around"><div class="col-auto">تَأَبَّطَ شَرًّا</div><div class="col" lang="en" dir="ltr">Nickname of an Arabian poet, <i>lit</i> : he carries evil under his arm. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Anything put under the armpit.
+<div class="row justify-content-around"><div class="col-auto">إِبَاط</div><div class="col" lang="en" dir="ltr">Anything put under the armpit.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">I put it beneath my armpit. 
+<div class="row justify-content-around"><div class="col-auto">جَعَلْتُهُ إِبَاطًا</div><div class="col" lang="en" dir="ltr">I put it beneath my armpit. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To run away, to flee, to take flight (slave). 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبق»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَبَقَ ◌ِ ◌ُ (أَبْق ، إِبَاق) إِلى</div><div class="col" lang="en" dir="ltr">To run away, to flee, to take flight (slave). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Flax.
+<div class="row justify-content-around"><div class="col-auto">أَبَق</div><div class="col" lang="en" dir="ltr">Flax.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Who has run away, who has fled. 
+<div class="row justify-content-around"><div class="col-auto">آبِقُ ، أَبُوق جـ. أُبَّق ، أُبَّاق</div><div class="col" lang="en" dir="ltr">Who has run away, who has fled. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To be a skilled manager of (camels). 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبل»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَبِلَ ◌َ (أَبَل) ، أَبَلَ ◌ُ (أَبَالَة)</div><div class="col" lang="en" dir="ltr">To be a skilled manager of (camels). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To go from the water to a fresh pasturage (cattle). 
+<div class="row justify-content-around"><div class="col-auto">-- ◌ُ ◌ِ (أَبَل ، أُبُول) ، أَبِلَ (أَبْل)</div><div class="col" lang="en" dir="ltr">To go from the water to a fresh pasturage (cattle). 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Camels.
 </div></div>
