fixed thru root Ebl

--- a/out.html
+++ b/out.html
@@ -138,15 +138,15 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">-- ◌ُ ◌ِ (أَبَل ، أُبُول) ، أَبِلَ (أَبْل)</div><div class="col" lang="en" dir="ltr">To go from the water to a fresh pasturage (cattle). 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Camels.
+<div class="row justify-content-around"><div class="col-auto">إِبِل جـ. آبَال ، أَبِيل</div><div class="col" lang="en" dir="ltr">Camels.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">A sexton, monk, bell-ringer. 
+<div class="row justify-content-around"><div class="col-auto">أَبِيل ، أَبِيل ، أَيْبُلِيّ جـ. آبَال ، أُبْل</div><div class="col" lang="en" dir="ltr">A sexton, monk, bell-ringer. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Large fagot of wood. Management of property, of goods. 
+<div class="row justify-content-around"><div class="col-auto">إِبَال ، إِبَّالَة</div><div class="col" lang="en" dir="ltr">Large fagot of wood. Management of property, of goods. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">A troop (of camels or birds) following each other in a file. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">A place full of camels, where many camels are to be found. 
+<div class="row justify-content-around"><div class="col-auto">مَأْبَلَة</div><div class="col" lang="en" dir="ltr">A place full of camels, where many camels are to be found. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To accuse, to charge a. o. with a fault. 
 </div></div>
