--- a/out.html
+++ b/out.html
@@ -131,7 +131,7 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">أَبَق</div><div class="col" lang="en" dir="ltr">Flax.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto">آبِقُ ، أَبُوق جـ. أُبَّق ، أُبَّاق</div><div class="col" lang="en" dir="ltr">Who has run away, who has fled. 
+<div class="row justify-content-around"><div class="col-auto">آبِق ، أَبُوق جـ. أُبَّق ، أُبَّاق</div><div class="col" lang="en" dir="ltr">Who has run away, who has fled. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"><b>«ءبل»</b></div><div class="col" lang="en" dir="ltr"></div></div>
 <div class="row justify-content-around"><div class="col-auto">I أَبِلَ ◌َ (أَبَل) ، أَبَلَ ◌ُ (أَبَالَة)</div><div class="col" lang="en" dir="ltr">To be a skilled manager of (camels). 
@@ -144,81 +144,88 @@
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">إِبَال ، إِبَّالَة</div><div class="col" lang="en" dir="ltr">Large fagot of wood. Management of property, of goods. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">A troop (of camels or birds) following each other in a file. 
+<div class="row justify-content-around"><div class="col-auto">أَبَابِيلُ</div><div class="col" lang="en" dir="ltr">A troop (of camels or birds) following each other in a file. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto">مَأْبَلَة</div><div class="col" lang="en" dir="ltr">A place full of camels, where many camels are to be found. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To accuse, to charge a. o. with a fault. 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبن»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَبَنَ ◌ِ ◌ُ (أَبْن) ه ب</div><div class="col" lang="en" dir="ltr">To accuse, to charge a. o. with a fault. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To compose the elegy of, to praise a dead person. 
+<div class="row justify-content-around"><div class="col-auto">II أَبَّنَ ه</div><div class="col" lang="en" dir="ltr">To compose the elegy of, to praise a dead person. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Beginning. Propitious time.
+<div class="row justify-content-around"><div class="col-auto">إِبَّان</div><div class="col" lang="en" dir="ltr">Beginning. Propitious time.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Knot. Hatred, enmity.
+<div class="row justify-content-around"><div class="col-auto">أُبْنَة جـ. أُبَن</div><div class="col" lang="en" dir="ltr">Knot. Hatred, enmity.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Blameworthy. Suspicious. Unmanly, effeminate. 
+<div class="row justify-content-around"><div class="col-auto">مَأْبُون</div><div class="col" lang="en" dir="ltr">Blameworthy. Suspicious. Unmanly, effeminate. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To remember a. th. 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبه»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَبَهَ ◌َ (أَبْه) ب ، ل</div><div class="col" lang="en" dir="ltr">To remember a. th. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">No one pays attention to it, unlieeded. 
+<div class="row justify-content-around"><div class="col-auto">لَا يُؤْبَهُ لَهُ</div><div class="col" lang="en" dir="ltr">No one pays attention to it, unlieeded. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To suspect a. o. of.
+<div class="row justify-content-around"><div class="col-auto">I أَبَهَ ه ب</div><div class="col" lang="en" dir="ltr">To suspect a. o. of.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To show pride.
+<div class="row justify-content-around"><div class="col-auto">V تَأَبَّهَ على</div><div class="col" lang="en" dir="ltr">To show pride.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To turn aside with scorn from.
+<div class="row justify-content-around"><div class="col-auto">-- عن</div><div class="col" lang="en" dir="ltr">To turn aside with scorn from.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Beauty, brightness. Pride.
+<div class="row justify-content-around"><div class="col-auto">أُبَّهَة</div><div class="col" lang="en" dir="ltr">Beauty, brightness. Pride.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To be a father.
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبو»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَبَا ◌ُ (إِبَاوَة ، أُبُوّ ، أُبُوَّة)</div><div class="col" lang="en" dir="ltr">To be a father.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To swear by one's father, to say: ([biA+Eaby A+Enot].{bw}) May I ransom thee with my father.
+<div class="row justify-content-around"><div class="col-auto">II أَبَّىٰ ه</div><div class="col" lang="en" dir="ltr">To swear by one's father, to say: (بِأَبِي أَنْت) May I ransom thee with my father.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To consider as a father.
+<div class="row justify-content-around"><div class="col-auto">V تَأَبَّىٰ ه</div><div class="col" lang="en" dir="ltr">To consider as a father.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Father.
+<div class="row justify-content-around"><div class="col-auto">أَبُ (عوض ابو) جـ. آبَاو</div><div class="col" lang="en" dir="ltr">Father.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Father. Word meaning causality or possession. 
+<div class="row justify-content-around"><div class="col-auto">أَبُو ، + بُو</div><div class="col" lang="en" dir="ltr">Father. <i>Word meaning causality or possession.</i>
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">The Heavenly Father.
+<div class="row justify-content-around"><div class="col-auto">الآب</div><div class="col" lang="en" dir="ltr">The Heavenly Father.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">O my father!
+<div class="row justify-content-around"><div class="col-auto">أَبَتِ ، يَا أَبَتِ ، يَا أَبَتُ ، يَا أَبَتَاه!</div><div class="col" lang="en" dir="ltr">O my father!
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Cock.
+<div class="row justify-content-around"><div class="col-auto">أَبُو اليَقَظَان</div><div class="col" lang="en" dir="ltr">Cock.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Poppy.
+<div class="row justify-content-around"><div class="col-auto">-- النَّوْم</div><div class="col" lang="en" dir="ltr">Poppy.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Sphynx.
+<div class="row justify-content-around"><div class="col-auto">أَبُو الهَوْل</div><div class="col" lang="en" dir="ltr">Sphynx.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">The man wearing spectacIes.
+<div class="row justify-content-around"><div class="col-auto">أَبُو النَّظَّارَة</div><div class="col" lang="en" dir="ltr">The man wearing spectacIes.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Paternity.
+<div class="row justify-content-around"><div class="col-auto">أُبُوَّة ، أُبَاوَة</div><div class="col" lang="en" dir="ltr">Paternity.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Fatherly, belonging to a father.
+<div class="row justify-content-around"><div class="col-auto">أَبَوِيّ</div><div class="col" lang="en" dir="ltr">Fatherly, belonging to a father.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Fatherly. + Paternity.
+<div class="row justify-content-around"><div class="col-auto">أَبَوِيَّة</div><div class="col" lang="en" dir="ltr">Fatherly. + Paternity.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To refuse, to disdain a. th. 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءبي»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَبَىٰ ◌َ ◌ِ (إِبَاء ، إِبَاءَة) ، V تَأَبَّىٰ هـ ، عَن</div><div class="col" lang="en" dir="ltr">To refuse, to disdain a. th. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To refuse a. th. to a. o.
+<div class="row justify-content-around"><div class="col-auto">-- ه على</div><div class="col" lang="en" dir="ltr">To refuse a. th. to a. o.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Refusal. Scorn.
+<div class="row justify-content-around"><div class="col-auto">إِبَاء</div><div class="col" lang="en" dir="ltr">Refusal. Scorn.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Who refuses, w-ho scorns.
+<div class="row justify-content-around"><div class="col-auto">آبٍ</div><div class="col" lang="en" dir="ltr">Who refuses, who scorns.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Haughty,
+<div class="row justify-content-around"><div class="col-auto">أَبِيّ</div><div class="col" lang="en" dir="ltr">Haughty,
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Shirt. Shift. Coat of mail. 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءتب»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">إِتْب جـ. آتَاب ، إِتَاب</div><div class="col" lang="en" dir="ltr">Shirt. Shift. Coat of mail. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To put on a shift, a coat of mail. 
+<div class="row justify-content-around"><div class="col-auto">V تَأَتَّبَ بِالْإِتْب</div><div class="col" lang="en" dir="ltr">To put on a shift, a coat of mail. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Haviog crooked nails.
+<div class="row justify-content-around"><div class="col-auto">مُؤَتَّب الظُّفْر</div><div class="col" lang="en" dir="ltr">Haviog crooked nails.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Rope to fasten the feet of a cow, when milked. 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءتد»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">إِتَاد جـ. آتِدَة ، أُتُد</div><div class="col" lang="en" dir="ltr">Rope to fasten the feet of a cow, when milked. 
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Stoker.
+<div class="row justify-content-around"><div class="col-auto">آتَشْجِي جـ. آتَشْجِيَّة</div><div class="col" lang="en" dir="ltr">Stoker.
 </div></div>
-<div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">To walk at a quick pace. 
+<div class="row justify-content-around"><div class="col-auto"><b>«ءتل»</b></div><div class="col" lang="en" dir="ltr"></div></div>
+<div class="row justify-content-around"><div class="col-auto">I أَتَلَ ◌ِ (أَتْل ، أَتَلَان)</div><div class="col" lang="en" dir="ltr">To walk at a quick pace. 
 </div></div>
 <div class="row justify-content-around"><div class="col-auto"></div><div class="col" lang="en" dir="ltr">Meeting at a dead person's house, funeral meeting. 
 </div></div>
